small fix overflow content

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,3 +1,4 @@
 .home {
    height: 100%; 
+   overflow-y: scroll;
 }
