--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@ body, section, .app, #root {
     height: 100%;
     width: 100%;
     margin: 0;
+    overflow: hidden;
 }
 
 body {
